# Gemcutter

./: .editorconfig  .gitignore  .gitmodules  BUILD.cmd  CMakeLists.txt  INSTALL.cmd  Jewel3D.sln  LICENSE  README.md  TEST.cmd  UNINSTALL.cmd
Engine/: Jewel3D.vcxproj  Jewel3D.vcxproj.filters  UnitTests.vcxproj  UnitTests.vcxproj.filters
Engine/Jewel3D/: Precompiled.cpp  Precompiled.h
Engine/Jewel3D/AI/: ProbabilityMatrix.cpp  ProbabilityMatrix.h
Engine/Jewel3D/Application/: Application.cpp  Application.h  CmdArgs.cpp  CmdArgs.h  Event.cpp  Event.h  Event.inl  FileSystem.cpp  FileSystem.h  HierarchicalEvent.h  Logging.cpp  Logging.h  Threading.cpp  Threading.h  Timer.cpp  Timer.h  Types.cpp  Types.h
Engine/Jewel3D/Entity/: Entity.cpp  Entity.h  Entity.inl  EntityGroup.cpp  EntityGroup.h  Hierarchy.cpp  Hierarchy.h  Name.cpp  Name.h  Query.inl
Engine/Jewel3D/Input/: Input.cpp  Input.h  XboxGamePad.cpp  XboxGamePad.h
Engine/Jewel3D/Math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
Engine/Jewel3D/Network/: Network.cpp  Network.h
Engine/Jewel3D/Reflection/: Reflection.cpp  Reflection.h  Reflection.inl
Engine/Jewel3D/Rendering/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  (+19 more)
Engine/UnitTests/: EntityComponentSystem.cpp  EnumFlags.cpp  FileSystem.cpp  Hierarchy.cpp  Math.cpp  Reflection.cpp  String.cpp  main.cpp
Licenses/: LICENSE_GLEW.txt
Resources/Docs/: AssetManager.md  Entity.md  Shader.md  Text.md
Tools/AssetManager/: AssetManager.csproj  Encoder.cs  EncoderEntry.cs  EncoderList.Designer.cs  EncoderList.cs  EncoderList.resx  FileCache.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Manager.Designer.cs  Manager.cs  Manager.resx  Program.cs  RichTextBoxStreamWriter.cs  Settings.Designer.cs  Settings.cs  WorkspaceConfig.cs
Tools/FontEncoder/: FontEncoder.cpp  FontEncoder.h  FontEncoder.vcxproj  FontEncoder.vcxproj.filters  main.cpp
Tools/MaterialEncoder/: MaterialEncoder.cpp  MaterialEncoder.vcxproj  MaterialEncoder.vcxproj.filters  main.cpp
Tools/MeshEncoder/: Form1.Designer.cs  Form1.cs  MeshEncoder.cpp  MeshEncoder.csproj  MeshEncoder.h  MeshEncoder.vcxproj  MeshEncoder.vcxproj.filters  Program.cs  main.cpp
Tools/TemplateEncoder/: Encoder.cpp  Encoder.h  Encoder.vcxproj  Encoder.vcxproj.filters  main.cpp
Tools/TemplateProject/: Settings.cfg  TemplateProject.vcxproj  TemplateProject.vcxproj.filters
Tools/TextureEncoder/: TextureEncoder.cpp  TextureEncoder.h  TextureEncoder.vcxproj  TextureEncoder.vcxproj.filters
docs/: AssetManager.md  Entity.md  Shader.md
gemcutter/: CMakeLists.txt  Gemcutter.natvis
gemcutter/AI/: ProbabilityMatrix.cpp  ProbabilityMatrix.h
gemcutter/Application/: Application.cpp  Application.h  CmdArgs.cpp  CmdArgs.h  Delegate.cpp  Delegate.h  Delegate.inl  Event.cpp  Event.h  Event.inl  FileSystem.cpp  FileSystem.h  HierarchicalEvent.cpp  HierarchicalEvent.h  Logging.cpp  Logging.h  Reflection.cpp  Reflection.h  Reflection.inl  Threading.cpp  Threading.h  Timer.cpp  Timer.h
gemcutter/Entity/: Entity.cpp  Entity.h  Entity.inl  Hierarchy.cpp  Hierarchy.h  Hierarchy.inl  Name.cpp  Name.h  Query.inl
gemcutter/GUI/: Button.cpp  Button.h  Image.cpp  Image.h  Label.cpp  Label.h  Rectangle.cpp  Rectangle.h  Screen.cpp  Screen.h  Widget.cpp  Widget.h  Widget.inl
gemcutter/Input/: Input.cpp  Input.h  XboxGamePad.cpp  XboxGamePad.h
gemcutter/Math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
gemcutter/Network/: Network.cpp  Network.h
gemcutter/Physics/: Physics.h
gemcutter/Physics/2D/: PhysicsDebug.cpp  PhysicsDebug.h  PhysicsWorld.cpp  PhysicsWorld.h  PhysicsWorld.inl  RigidBody.cpp  RigidBody.h
gemcutter/Rendering/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  ParticleEmitter.cpp  ParticleEmitter.h  Primitives.cpp  Primitives.h  RenderPass.cpp  RenderPass.h  RenderTarget.cpp  RenderTarget.h  Renderable.cpp  Renderable.h  Rendering.cpp  Rendering.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Viewport.cpp  Viewport.h
gemcutter/Resource/: ConfigTable.cpp  ConfigTable.h  Encoder.h  Font.cpp  Font.h  Material.cpp  Material.h  Model.cpp  Model.h  ParticleBuffer.cpp  ParticleBuffer.h  ParticleFunctor.cpp  ParticleFunctor.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Shareable.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UniformBuffer.inl  VertexArray.cpp  VertexArray.h  VertexArray.inl
gemcutter/Sound/: SoundListener.cpp  SoundListener.h  SoundSource.cpp  SoundSource.h  SoundSystem.cpp  SoundSystem.h
gemcutter/Utilities/: Container.h  EnumFlags.h  Identifier.h  Meta.h  Random.cpp  Random.h  ScopeGuard.h  StdExt.h  String.cpp  String.h
resources/Shaders/: Diffuse.shader  FlatColor.shader  Font.shader  Lambert.shader  ParticleBillBoard.shader  Skybox.shader  Sprite.shader  VertexColor.shader
tests/: CMakeLists.txt  Delegate.cpp  EntityComponentSystem.cpp  EnumFlags.cpp  FileSystem.cpp  Hierarchy.cpp  Math.cpp  Meta.cpp  String.cpp  WeakPtr.cpp  main.cpp
tools/: CMakeLists.txt
tools/AssetManager/: CMakeLists.txt  EncoderEntry.cs  FileCache.cs  Manager.Designer.cs  Manager.cs  Program.cs  RichTextBoxStreamWriter.cs  Settings.cs  WorkspaceConfig.cs  open_asset_manager_template.cmd  pack_assets_template.cmd
tools/AssetManager/Properties/: Resources.Designer.cs  Resources.resx
tools/AssetManager/workspace_templates/: config.workspace  open_asset_manager.cmd  pack_assets.cmd  update_metadata.cmd
tools/EncoderTemplate/: CMakeLists.txt  Encoder.cpp  Encoder.h  main.cpp
tools/FontEncoder/: CMakeLists.txt  FontEncoder.cpp  FontEncoder.h  main.cpp
tools/MaterialEncoder/: CMakeLists.txt  MaterialEncoder.cpp  MaterialEncoder.h  main.cpp
tools/MeshEncoder/: CMakeLists.txt  MeshEncoder.cpp  MeshEncoder.h  main.cpp
tools/SoundEncoder/: CMakeLists.txt  SoundEncoder.cpp  SoundEncoder.h  main.cpp
tools/TextureEncoder/: CMakeLists.txt  TextureEncoder.cpp  TextureEncoder.h  main.cpp
(+81 files in other folders)
